<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">短信加密系统</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
	<string name="decode">加密</string>  
    <string name="encode">解密</string>  
    <string name="about">关于</string>
     <string name="tuijian">推荐</string> 
    <string name="exit">退出</string>
    
</resources>
